# pacman-milestones

./: README.md
MS21/: README.md
MS21/icp_pacman_pe/: CMakeLists.txt
MS21/icp_pacman_pe/src/: icp_pacman_pe.cpp
MS21/thresholdClassifier/: detectionMat_partpe.txt  labels.txt  scores_partpe.txt  testModel.m  threshold_classify.m  trainModel.m
MS22/: README.md  compute_grasps.sh
MS22/classification/: classify_gpc.m  getFeaturesFromDir.m  getMoments.m  leaveOneOut.m
MS22/classification/data/mes_pacmanpilot/20150225_130659/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_131145/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_131435/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_131619/: kinesthetic_mes.txt  score_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_134151/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_134517/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_134712/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_134854/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_140141/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_140331/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_140454/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_140618/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_141907/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_142044/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_142202/: kinesthetic_mes.txt  score_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_143220/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_143442/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_143617/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_143952/: kinesthetic_mes.txt  score_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_145523/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_150135/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_150306/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_150444/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_151531/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_154534/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_154654/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_154837/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_160318/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_161304/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_161621/: kinesthetic_mes.txt  score_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_162744/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_163122/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_163313/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_163447/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_163614/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_164415/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_164630/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_165646/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_165929/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/classification/data/mes_pacmanpilot/20150225_170110/: kinesthetic_mes.txt  score_mes.txt  tactile_mes.txt
MS22/part-based-planner/: CMakeLists.txt  Makefile  README.md  default.cfg
MS22/part-based-planner/bin-src/: plan.cpp
MS22/part-based-planner/lib-src/: KukaLWR_Kinematics.cpp  KukaLWR_Kinematics.hpp  Reachable.cpp  UIBK_kinematics.hpp  UibkGraspTemplates.cpp  collission_checker.cpp
MS22/part-based-planner/lib-src/pbp/: Reachable.hpp  UibkGraspTemplates.hpp  UibkRightKukaReachable.cpp  UibkRightKukaReachable.hpp  collission_checker.hpp
MS22/part-based-planner/scripts/: pbp-planner.py  pbp-view.py  pbp.py
MS22/template_generator/: CMakeLists.txt
MS22/template_generator/pacman_pilot/: download_extract_data.sh
MS22/template_generator/src/: forwardKinematics.cpp  forwardKinematics.h  template_generator.cpp
part-segmentation/: .gitignore  CMakeLists.txt  README.md  config-data.xml  main.cpp  vision.cpp  vision.h
